--- a/content.tex
+++ b/content.tex
@@ -35,7 +35,7 @@
   \IfFileExists{./QR2.png}{
   \footnotesize{slides (excl.\ cern logo) will appear on}
     
-    \myhref{linkgoeshere}{LINK GOES HERE}\includegraphics[width=.2\textwidth]{./QR2.png}
+    \gitlablink\includegraphics[width=.2\textwidth]{./QR2.png}
 }{}
 \end{frame}
 
