friday morning version

--- a/header.tex
+++ b/header.tex
@@ -1,4 +1,4 @@
-\author[Paul]{Paul Seyfert}
-\institute[CERN]{}
+\author[pseyfert]{pseyfert}
+\institute[]{ \includegraphics[width=.16\textwidth]{/home/pseyfert/coding/overleaf-commenter/logo.eps}\hspace{.1\textwidth}\includegraphics[width=.24\textwidth]{./QR2.png} }
 \date[\today]{}
-\title{\myhref{https://github.com/pseyfert/tmva-branch-adder}{tmva-branch-adder}}
+\title{\myhref{https://github.com/pseyfert/overleaf-commenter}{overleaf-commenter}}
