--- a/pseyfert.tex
+++ b/pseyfert.tex
@@ -26,56 +26,68 @@
 \fi
 
 \usepackage{listings}
-\usepackage[framemethod=tikz]{mdframed}
-\lstloadlanguages{C++}
+\lstset{ %
+  showspaces=true,
+  basicstyle=\footnotesize,
+  breaklines=true,
+  commentstyle=\color{black},
+  escapeinside={\%*}{*)},
+  keywordstyle=\color{blue},
+  stringstyle=\color{red},
+}
+
+% \usepackage[framemethod=tikz]{mdframed}
+% \lstloadlanguages{C++}
+% \lstloadlanguages{tex}
 \makeatletter
 \newcommand{\srcsize}{\@setfontsize{\srcsize}{5pt}{5pt}}
 \makeatother
-\lstset{language=[11]C++,
-  literate= % define some ligatures for PragmataPro
-  {!!}{\texttt{!!}}2 {::}{\texttt{::}}2 {++}{\texttt{++}}2
-  {--}{\texttt{--}}2 {()}{\texttt{()}}2 {\[\]}{\texttt{[]}}2
-  {==}{\texttt{==}}2 {!=}{\texttt{!=}}2 {>=}{\texttt{>=}}2
-  {<=}{\texttt{<=}}2 {&&}{\texttt{\&\&}}2 {||}{\texttt{||}}2
-  {!>}{\texttt{!>}}2 {\#(}{\texttt{\#(}}2 {\#_}{\texttt{\#_}}2
-  {\#\{}{\texttt{\#\{}}2 {\#?}{\texttt{\#?}}2 {\#>}{\texttt{\#>}}2
-  {\%=}{\texttt{\%=}}2 {+=}{\texttt{+=}}2 {-=}{\texttt{-=}}2
-  {*=}{\texttt{*=}}2 {/=}{\texttt{/=}}2 {&=}{\texttt{&=}}2
-  {^=}{\texttt{^=}}2 {|=}{\texttt{|=}}2 {~=}{\texttt{~=}}2
-  {<<}{\texttt{<<}}2 {>>}{\texttt{>>}}2 {->}{\texttt{->}}2
-  {__}{\texttt{\_\_}}2
-  {!!!}{\texttt{!!!}}3 {>>=}{\texttt{>>=}}3 {<<=}{\texttt{<<=}}3
-  {/==}{\texttt{/==}}3 {...}{\texttt{...}}3,
-  deletekeywords=[1]{auto,const,static,volatile,void,char,short,int,long,unsigned,float,double,inline,template,typename,namespace,class,union,struct,enum,true,false,nullptr},
-  morekeywords=[2]{auto,const,static,volatile},
-  morekeywords=[3]{void,char,short,int,long,unsigned,float,double,size_type,inline,iterator,const_iterator,reference,const_reference,Uninitialised,template,typename,namespace,class,union,struct,enum},
-  morekeywords=[4]{std,our,LHCb,T,ARGS},
-  morekeywords=[5]{true,false,nullptr,__LINE__,__FILE__,__func__},
-  basicstyle=\srcsize\ttfamily\color{black},
-  keywordstyle=[1]\color{magenta}\textbf,
-  keywordstyle=[2]\color{orange}\textbf,
-  keywordstyle=[3]\color{cyan}\textbf,
-  keywordstyle=[4]\color{black},
-  keywordstyle=[5]\color{violet!80!white},
-  directivestyle=\color{blue!50!white},
-  commentstyle=\color{blue}\textsl,
-  stringstyle=\color{gray},
-  identifierstyle=\color{green!50!black},
-breaklines=true,breakautoindent=true}
-
-\mdfdefinestyle{listing}{
-  backgroundcolor=white!96!black,hidealllines,
-  skipabove=0pt,skipbelow=0pt,
-  leftmargin=0pt,rightmargin=0pt,
-  innertopmargin=-5pt,innerbottommargin=-5pt,
-  innerleftmargin=0pt,innerrightmargin=0pt,
-  linewidth=0pt,middlelinewidth=0pt,
-  startcode={\vspace{-3pt}},endcode={\vspace{-2ex}}
-}
-\surroundwithmdframed[style=listing]{lstlisting}
+% \lstset{language=[11]C++,
+%   literate= % define some ligatures for PragmataPro
+%   {!!}{\texttt{!!}}2 {::}{\texttt{::}}2 {++}{\texttt{++}}2
+%   {--}{\texttt{--}}2 {()}{\texttt{()}}2 {\[\]}{\texttt{[]}}2
+%   {==}{\texttt{==}}2 {!=}{\texttt{!=}}2 {>=}{\texttt{>=}}2
+%   {<=}{\texttt{<=}}2 {&&}{\texttt{\&\&}}2 {||}{\texttt{||}}2
+%   {!>}{\texttt{!>}}2 {\#(}{\texttt{\#(}}2 {\#_}{\texttt{\#_}}2
+%   {\#\{}{\texttt{\#\{}}2 {\#?}{\texttt{\#?}}2 {\#>}{\texttt{\#>}}2
+%   {\%=}{\texttt{\%=}}2 {+=}{\texttt{+=}}2 {-=}{\texttt{-=}}2
+%   {*=}{\texttt{*=}}2 {/=}{\texttt{/=}}2 {&=}{\texttt{&=}}2
+%   {^=}{\texttt{^=}}2 {|=}{\texttt{|=}}2 {~=}{\texttt{~=}}2
+%   {<<}{\texttt{<<}}2 {>>}{\texttt{>>}}2 {->}{\texttt{->}}2
+%   {__}{\texttt{\_\_}}2
+%   {!!!}{\texttt{!!!}}3 {>>=}{\texttt{>>=}}3 {<<=}{\texttt{<<=}}3
+%   {/==}{\texttt{/==}}3 {...}{\texttt{...}}3,
+%   deletekeywords=[1]{auto,const,static,volatile,void,char,short,int,long,unsigned,float,double,inline,template,typename,namespace,class,union,struct,enum,true,false,nullptr},
+%   morekeywords=[2]{auto,const,static,volatile},
+%   morekeywords=[3]{void,char,short,int,long,unsigned,float,double,size_type,inline,iterator,const_iterator,reference,const_reference,Uninitialised,template,typename,namespace,class,union,struct,enum},
+%   morekeywords=[4]{std,our,LHCb,T,ARGS},
+%   morekeywords=[5]{true,false,nullptr,__LINE__,__FILE__,__func__},
+%   basicstyle=\srcsize\ttfamily\color{black},
+%   keywordstyle=[1]\color{magenta}\textbf,
+%   keywordstyle=[2]\color{orange}\textbf,
+%   keywordstyle=[3]\color{cyan}\textbf,
+%   keywordstyle=[4]\color{black},
+%   keywordstyle=[5]\color{violet!80!white},
+%   directivestyle=\color{blue!50!white},
+%   commentstyle=\color{blue}\textsl,
+%   stringstyle=\color{gray},
+%   identifierstyle=\color{green!50!black},
+% breaklines=true,breakautoindent=true}
+%
+% \mdfdefinestyle{listing}{
+%   backgroundcolor=white!96!black,hidealllines,
+%   skipabove=0pt,skipbelow=0pt,
+%   leftmargin=0pt,rightmargin=0pt,
+%   innertopmargin=-5pt,innerbottommargin=-5pt,
+%   innerleftmargin=0pt,innerrightmargin=0pt,
+%   linewidth=0pt,middlelinewidth=0pt,
+%   startcode={\vspace{-3pt}},endcode={\vspace{-2ex}}
+% }
+% \surroundwithmdframed[style=listing]{lstlisting}
 
 \usepackage{fontspec}
 \setmainfont{Times New Roman}[]
+\newfontfamily\DejaSans{DejaVu Sans}
 %\setsansfont{FrontPagePro}[Scale=MatchLowercase]
 \IfFileExists{/usr/local/share/fonts/PragmataPro/PragmataPro_Mono_R_0826.ttf}{\setmonofont{PragmataPro}[Scale=MatchLowercase]}{}
 
@@ -108,9 +120,9 @@ breaklines=true,breakautoindent=true}
 
 % https://tex.stackexchange.com/a/98205
 \newsavebox{\unilogo} \newsavebox{\pilogo} \newsavebox{\lhcblogo}
-\IfFileExists{../cern-logo-gray.eps}{\sbox{\unilogo}{\includegraphics[height=1.2cm]{../cern-logo-gray.eps}} }{\sbox{\unilogo}{\includegraphics[height=1.2cm]{cern-logo-gray.eps}}}
-\IfFileExists{../cern-logo.eps}{     \sbox{\pilogo}{\includegraphics[height=0.75cm]{../cern-logo.eps}}      }{\sbox{\pilogo}{\includegraphics[height=0.75cm]{cern-logo.eps}}     }
-\IfFileExists{../lhcb-logo.eps}{\sbox{\lhcblogo}{\includegraphics[height=0.75cm]{../lhcb-logo.eps}}}{\sbox{\lhcblogo}{\includegraphics[height=0.75cm]{lhcb-logo.eps}}}
+\sbox{\unilogo}{\includegraphics[height=1.2cm]{/home/pseyfert/coding/overleaf-commenter/logo.eps}}
+\sbox{\pilogo}{\includegraphics[height=0.75cm]{/home/pseyfert/coding/overleaf-commenter/logo-bw.eps}}
+\sbox{\lhcblogo}{\includegraphics[height=0.75cm]{lhcb-logo.eps}}
 
 \setbeamertemplate{footline}
 {
@@ -118,7 +130,7 @@ breaklines=true,breakautoindent=true}
   \hbox{%
     \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,left]{author in head/foot}%
       \usebeamerfont{author in head/foot}\vtop{\vskip-2.25ex\hbox{\resizebox{!}{3.25ex}{\usebox{\pilogo}}}}%
-      \hfill \insertshortauthor~~(\insertshortinstitute) \hfill%
+      \hfill \insertshortauthor \hfill%
     \end{beamercolorbox}%
     \begin{beamercolorbox}[wd=.333333\paperwidth,ht=2.25ex,dp=1ex,center]{title in head/foot}%
       \usebeamerfont{title in head/foot}\insertshorttitle%
