--- a/header.tex
+++ b/header.tex
@@ -1,4 +1,5 @@
 \author[pseyfert]{pseyfert}
-\institute[]{ \includegraphics[width=.16\textwidth]{/home/pseyfert/coding/overleaf-commenter/logo.eps}\hspace{.1\textwidth}\includegraphics[width=.24\textwidth]{./QR2.png} }
+\institute[]{ \includegraphics[width=.16\textwidth]{logo.eps}\hspace{.1\textwidth}\includegraphics[width=.24\textwidth]{./QR2.png} }
 \date[\today]{}
 \title{\myhref{https://github.com/pseyfert/overleaf-commenter}{overleaf-commenter}}
+\newcommand{\gitlablink}{\myhref{https://gitlab.cern.ch/pseyfert/slides-mrmcd-overleaf-commenter-2018-09-08}{https://gitlab.cern.ch/pseyfert/slides-mrmcd-overleaf-commenter-2018-09-08}}
