--- a/pseyfert.tex
+++ b/pseyfert.tex
@@ -120,8 +120,8 @@
 
 % https://tex.stackexchange.com/a/98205
 \newsavebox{\unilogo} \newsavebox{\pilogo} \newsavebox{\lhcblogo}
-\sbox{\unilogo}{\includegraphics[height=1.2cm]{/home/pseyfert/coding/overleaf-commenter/logo.eps}}
-\sbox{\pilogo}{\includegraphics[height=0.75cm]{/home/pseyfert/coding/overleaf-commenter/logo-bw.eps}}
+\sbox{\unilogo}{\includegraphics[height=1.2cm]{logo.eps}}
+\sbox{\pilogo}{\includegraphics[height=0.75cm]{logo-bw.eps}}
 \sbox{\lhcblogo}{\includegraphics[height=0.75cm]{lhcb-logo.eps}}
 
 \setbeamertemplate{footline}
