got the license wrong on the slides :(

--- a/content.tex
+++ b/content.tex
@@ -84,7 +84,7 @@
           \item insert after cursor
           \item check if discussion already present (yes: reply, no: start)
         \end{itemize}
-      \item code under GPL, copyright with my employer
+      \item code under AGPL, copyright with my employer
     \end{itemize}
   \end{block}
   \begin{exampleblock}{I'd be happy if this is of use for somebody}
